CATS-1251: Add revert functionality on gift certificate - enabled

--- a/Web/Areas/EarlyWarning/Views/GiftCertificate/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/GiftCertificate/Index.cshtml
@@ -84,7 +84,7 @@
                                       var ewCache = UserAccountHelper.GetUserPermissionCache(CatsGlobals.Applications.EarlyWarning);
                                   }
 
-                                  @if (item.Status == "Draft")
+                                  @if (item.Status == "Draft" || item.Status == "Rejected")
                                   {
                                       @Html.EarlyWarningOperationButton(
                                           @Url.Action("Edit", new {id = item.GiftCertificateID}),
