Fix Update on CATS-1164 Bid winner reverse functionality

--- a/Web/Areas/Procurement/Views/PriceQuotation/RevertWinners.cshtml
+++ b/Web/Areas/Procurement/Views/PriceQuotation/RevertWinners.cshtml
@@ -5,6 +5,8 @@
 @{
     ViewBag.Title = "Revert Winners";
     Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = "Revert Winners";
+    ViewBag.PageTitleDescription = "";
 
 }
 
