--- a/Web/Areas/EarlyWarning/Views/Request/Allocation.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Allocation.cshtml
@@ -6,23 +6,42 @@
 @using Kendo.Mvc.UI
 
 @{
-    ViewBag.Title = "Resource Allocation";
-
-    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
-
-    ViewBag.PageTitle = Html.Translate("Resource Allocation");
-
-    ViewBag.PageTitleDescription = "";
+    ViewBag.Title = "Regional Relief Requests";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
 <link href="~/Content/tokeninput/styles/token-input.css" rel="stylesheet" />
 <link href="~/Content/tokeninput/styles/token-input-facebook.css" rel="stylesheet" />
 
 @section Toolbar    {
-    <a class="btn btn-fit-height grey-salt" href="@Url.Action("Details", "Request", new {Area = "EarlyWarning", id = Model.RegionalRequestID})" data-buttontype="btn_back_to_list"> <i class="fa fa-list"></i> @Html.Translate("Back to List")</a>
+    <!--
+        <div class="btn-group">
+        <button class="btn dropdown-toggle " data-toggle="dropdown">
+            @Html.Translate("Actions")
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a id="btnAddFDP" href="@Url.Action("AddBeneficary", "Request", new { id = Model.RegionalRequestID, programId = @ViewBag.programId })">@Html.Translate("Add FDP")</a></li>
+            <li><a id="btnAddCommodity" href="@Url.Action("AddCommodity", "Request", new { id = Model.RegionalRequestID })">@Html.Translate("Add Commodity")</a></li>
+        </ul>
+        </div>
+        <a class="btn toolbar-btn " data-buttontype="btn_save" href="javascript:saverecords()"></a>
+
+        <a class="btn toolbar-btn " href="@Url.Action("Details", "Request", new { Area = "EarlyWarning", id = Model.RegionalRequestID })" data-buttontype="btn_back_to_list"></a>
+
+    -->
+    <a class="btn toolbar-btn " href="@Url.Action("Details", "Request", new { Area = "EarlyWarning",id = Model.RegionalRequestID })" data-buttontype="btn_back_to_list"></a>
+
+
 }
 
 
+<fieldset>
+    <legend>
+        @Html.Translate("Resource Allocation")
+
+    </legend>
+</fieldset>
 @Html.HiddenFor(m => m.RegionalRequestID)
 
 
@@ -97,167 +116,117 @@
     .k-grid tbody tr:nth-child(2n) {
         background: #EEE;
     }
-
-    .control-label {
-        margin-top: 7px;
-        font-weight: bold;
-    }
-
-    .token-inputs .token-input-token-facebook {
-        padding: 5px 10px;
-        color: #fff;
-        background-color: #2b3643;
-    }
 </style>
 
 <div ng-app ng-controller="RequestAllocationController">
 
-    <div class="well">
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="form-group">
-                    <label class="control-label col-md-4" style="text-align: right;">@Html.Translate("Reference") :</label>
-                    <div class="col-md-8">
-                        <p class="form-control-static"> @Model.ReferenceNumber</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group">
-                    <label class="control-label col-md-4" style="text-align: right;">@Html.Translate("Region") :</label>
-                    <div class="col-md-8">
-                        <p class="form-control-static"> @Model.Region</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group">
-                    <label class="control-label col-md-4" style="text-align: right;">@Html.Translate("Program") :</label>
-                    <div class="col-md-8">
-                        <p class="form-control-static"> @Model.Program</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="form-group">
-                    <label class="control-label col-md-4" style="text-align: right;">@Html.Translate("Request Date") :</label>
-                    <div class="col-md-8">
-                        <p class="form-control-static"> @Model.RequestDate</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group">
-                    <label class="control-label col-md-4" style="text-align: right;">@Html.Translate("Year") :</label>
-                    <div class="col-md-8">
-                        <p class="form-control-static"> @Model.Year</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group">
-                    <label class="control-label col-md-4" style="text-align: right;">@Html.Translate("Ration") :</label>
-                    <div class="col-md-8">
-                        <p class="form-control-static"> @Model.Ration</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="section-hilite summaryview" style="width: 90%; background: #FFF">
+        <!--
+        <div class="loading"><i class="fa fa-book fa-fw fa-border"></i> loading</div>
+        -->
+        <table style="width: 90%; background: #FFF">
+            <tr>
+                <td class="fldlabel">Reference : </td>
+                <td class="fldvalue">@Model.ReferenceNumber</td>
+                <td class="fldlabel">Region : </td>
+                <td class="fldvalue">@Model.Region</td>
+                <td class="fldlabel">Program : </td>
+                <td class="fldvalue">@Model.Program</td>
+            </tr>
+            <tr>
+                <td class="fldlabel">@Html.Translate("Request Date") : </td>
+                <td class="fldvalue">@Model.RequestDate</td>
+                <td class="fldlabel">@Html.Translate("Year") : </td>
+                <td class="fldvalue">@Model.Year</td>
+                <td class="fldlabel">@Html.Translate("Ration") : </td>
+                <td class="fldvalue">@Model.Ration </td>
+            </tr>
+        </table>
     </div>
 
 
-    <div class="form-group  token-inputs">
-        <label class="control-label col-md-4" style="text-align: right;margin-top: 16px;">@Html.Translate("Commodities") :</label>
-        <div class="col-md-8">
-            <p class="form-control-static"> <input id="txt_requested_commodities" class="flat-input" /></p>
-        </div>
+    <div class="section-hilite token-inputs" style="padding: 1px;">
+        <table>
+            <tr>
+                <td style="padding-left: 20px; padding-right: 4px;">
+
+                    @Html.Translate("Commodities")
+                </td>
+                <td><input id="txt_requested_commodities" class="flat-input" /></td>
+            </tr>
+        </table>
     </div>
-    <div class="portlet light bordered">
-        <div class="portlet-title">
-            <div class="caption font-green-sharp">
-                <i class="icon-list font-green-sharp"></i>
-                <span class="caption-subject bold uppercase"> @Html.Translate("Resource Allocation")</span>
-            </div>
-            <div class="tools">
-                <a href="#" class="collapse" data-original-title="" title=""></a>
-            </div>
 
-        </div>
-        <div class="portlet-body">
-            <div class="k-widget k-grid" style="height: 400px; overflow: scroll;">
 
-                <table id="tbl_allocation">
-                    <thead class="k-grid-header">
-                        <tr>
-                            <th style="width: 50px; padding: 7px;">No.</th>
-                            <th style="width: 150px; padding: 7px;">Zone</th>
-                            <th style="width: 150px; padding: 7px;">Woreda</th>
-                            <th style="width: 150px">FDP</th>
-                            <!-- <th style="width:150px">Planned</th>-->
-                            <th style="width: 150px">Beneficiary</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody class="k-grid-content">
+    <div class="k-widget k-grid" style="height: 400px; overflow: scroll;">
+        <table id="tbl_allocation">
+            <thead class="k-grid-header">
+                <tr>
+                    <th style="width: 50px; padding: 7px;">No.</th>
+                    <th style="width: 150px; padding: 7px;">Zone</th>
+                    <th style="width: 150px; padding: 7px;">Woreda</th>
+                    <th style="width: 150px">FDP</th>
+                    <!-- <th style="width:150px">Planned</th>-->
+                    <th style="width: 150px">Beneficiary</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody class="k-grid-content">
 
-                        <tr ng-repeat="allocation in allocations | orderBy:['Zone', 'Woreda', 'FDP']"
-                            ng-show="isUniqueZone($index) || isUniqueWoreda($index) || allocation.showA">
-                            <td>{{$index+1}} </td>
+                <tr ng-repeat="allocation in allocations | orderBy:['Zone', 'Woreda', 'FDP']"
+                    ng-show="isUniqueZone($index) || isUniqueWoreda($index) || allocation.showA">
+                    <td>{{$index+1}} </td>
 
-                            <td ng-show="isUniqueZone($index)">
-                                <button ng-click="ChangeVisible(allocation.Zone)" ng-show="allocation.showA" class="btn default btn-xs red-sharp-stripe"> -</button>
-                                <button ng-click="ChangeVisible(allocation.Zone)" ng-show="!allocation.showA" class="btn default btn-xs red-sharp-stripe"> + </button>
-                                <b class="margin-right-10">{{allocation.Zone}}</b>
-                            </td>
+                    <td ng-show="isUniqueZone($index)">
+                        <button ng-click="ChangeVisible(allocation.Zone)" ng-show="allocation.showA"> -</button>
+                        <button ng-click="ChangeVisible(allocation.Zone)" ng-show="!allocation.showA"> + </button>
+                        <b class="margin-right-10">{{allocation.Zone}}</b>
+                    </td>
 
-                            <td ng-show="!isUniqueZone($index)"></td>
-                            @*<td ng-show="allocation.showA">{{allocation.Woreda}}</td>*@
+                    <td ng-show="!isUniqueZone($index)"></td>
+                    @*<td ng-show="allocation.showA">{{allocation.Woreda}}</td>*@
 
-                            <td ng-show="isUniqueWoreda($index)">
-                                <button ng-click="ChangeVisibleWoreda(allocation.Woreda)" ng-show="allocation.showA" class="btn default btn-xs red-sharp-stripe"> -</button>
-                                <button ng-click="ChangeVisibleWoreda(allocation.Woreda)" ng-show="!allocation.showA" class="btn default btn-xs red-sharp-stripe"> + </button>
-                                <b class="margin-right-10">{{allocation.Woreda}}</b>
-                            </td>
-                            <td ng-show="!isUniqueWoreda($index)"></td>
-                            <td ng-show="allocation.showA">
-                                <a ng-click="onFdpListShow($index)" id="fdp_selector_button{{$index}}" class="edit_button" href="javascript:_Void()">{{allocation.FDP}}</a>
-                            </td>
-                            <td ng-show="allocation.showA">
-                                <input class="flat-input txt_beneficiaries" type="number" onfocus="onGridInputFocus(this)" min="0" oninput="validity.valid||(value='');" ng-change="onAllocatoinChange({{allocation.Fdpid}})" ng-model="allocation.Beneficiaries" />
-                            </td>
-                            <td ng-show="allocation.showA"><button class="edit_button btn btn-xs btn-danger" ng-click="deleteRequestedFDP(allocation)"><i class="icon-trash icon-white"></i> Delete</button></td>
+                    <td ng-show="isUniqueWoreda($index)">
+                        <button ng-click="ChangeVisibleWoreda(allocation.Woreda)" ng-show="allocation.showA"> -</button>
+                        <button ng-click="ChangeVisibleWoreda(allocation.Woreda)" ng-show="!allocation.showA"> + </button>
+                        <b class="margin-right-10">{{allocation.Woreda}}</b>
+                    </td>
+                    <td ng-show="!isUniqueWoreda($index)"></td>
+                    <td ng-show="allocation.showA">
+                        <a ng-click="onFdpListShow($index)" id="fdp_selector_button{{$index}}" class="edit_button" href="javascript:_Void()">{{allocation.FDP}}</a>
+                    </td>
+                    <td ng-show="allocation.showA">
+                        <input class="flat-input txt_beneficiaries" type="number" onfocus="onGridInputFocus(this)" min="0" oninput="validity.valid||(value='');" ng-change="onAllocatoinChange({{allocation.Fdpid}})" ng-model="allocation.Beneficiaries" />
+                    </td>
+                    <td ng-show="allocation.showA"><button class="edit_button btn btn-danger" ng-click="deleteRequestedFDP(allocation)"><i class="icon-trash icon-white"></i> Delete</button></td>
 
-                        </tr>
+                </tr>
 
-                        <tr id="newAllocationEdit" style="display: none;">
-                            <td></td>
-                            <td>{{newAllocation.Zone}}</td>
-                            <td>{{newAllocation.Woreda}}</td>
-                            <td><a ng-click="onFdpListShow('new')" id="fdp_selector_buttonnew" class="edit_button" href="#">{{newAllocation.FDP}}</a></td>
-                            <!-- <td></td>-->
-                            <td><input class="flat-input" ng-model="newAllocation.Beneficiaries" id="txtNewAllocationBeneficiaries" /></td>
-                            <td>
-                                <button class="edit_button btn btn-primary" ng-click="saveAllocation(newAllocation,true)"><i class="icon-ok icon-white"></i>Save</button>
-                                <button class="edit_button btn" ng-click="onCreateAllocationCancel()"><i class="icon-trash icon-white"></i>Cancel</button>
+                <tr id="newAllocationEdit" style="display: none;">
+                    <td></td>
+                    <td>{{newAllocation.Zone}}</td>
+                    <td>{{newAllocation.Woreda}}</td>
+                    <td><a ng-click="onFdpListShow('new')" id="fdp_selector_buttonnew" class="edit_button" href="#">{{newAllocation.FDP}}</a></td>
+                    <!-- <td></td>-->
+                    <td><input class="flat-input" ng-model="newAllocation.Beneficiaries" id="txtNewAllocationBeneficiaries" /></td>
+                           <td>
+                        <button class="edit_button btn btn-primary" ng-click="saveAllocation(newAllocation,true)"><i class="icon-ok icon-white"></i>Save</button>
+                        <button class="edit_button btn" ng-click="onCreateAllocationCancel()"><i class="icon-trash icon-white"></i>Cancel</button>
 
-                            </td>
-                        </tr>
-                        <tr style="display: none;"><td colspan="6"></td></tr>
-                        <tr id="cmdAddAllocation">
-                            <td colspan="5"></td>
-                            <td>
-                                <button class="edit_button btn btn-primary" ng-click="onCreateNewAllocation()"><i class="icon-plus icon-white"></i> New</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div style="height: 350px;"></div>
-            </div>
-        </div>
+                    </td>
+                </tr>
+                <tr style="display: none;"><td colspan="6"></td></tr>
+                <tr id="cmdAddAllocation">
+                    <td colspan="5"></td>
+                    <td>
+                        <button class="edit_button btn btn-primary" ng-click="onCreateNewAllocation()"><i class="icon-plus icon-white"></i> New</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div style="height: 350px;"></div>
     </div>
+
     <div id="div_form_template" style="display: none;">
         <button type="button" class="close" data-dismiss="popover" style="margin-top: -30px; margin-right: 10px;" onclick="hidePopover()">×</button>
         <div class="controls" style="width: 276px; min-height: 100px; overflow: hidden;">
