--- a/Web/Areas/Logistics/Views/TransportRequisition/Index.cshtml
+++ b/Web/Areas/Logistics/Views/TransportRequisition/Index.cshtml
@@ -75,19 +75,27 @@
     <div class="portlet-body">
         <div class="table-responsive">
             @(Html.Kendo().Grid<TransportRequisitionViewModel>().Name("Grid").Columns(columns =>
-{
+        {
 
-    columns.Bound(requisition => requisition.TransportRequisitionNo).Title(Html.Translate("No.")).ClientTemplate("<a href='" + Url.Action("Details", "TransportRequisition", new { Area = "Logistics", id = "#=TransportRequisitionID#" }) + " '>#=TransportRequisitionNo#</a>  ");
-    columns.Bound(requisition => requisition.Region).Title(Html.Translate("Region"));
-    columns.Bound(requisition => requisition.Program).Title(Html.Translate("Program"));
-    columns.Bound(requisition => requisition.Round);
-    columns.Bound(requisition => requisition.DateRequested).Title(Html.Translate("Request Date")).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-    //columns.Bound(requisition => requisition.CertifiedBy);
-    //columns.Bound(requisition => requisition.DateCertified).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-    columns.Bound(requisiton => requisiton.Status).Title(Html.Translate("Status"));
+            columns.Bound(requisition => requisition.TransportRequisitionNo).Title(Html.Translate("No.")).ClientTemplate("<a href='" + Url.Action("Details", "TransportRequisition", new { Area = "Logistics", id = "#=TransportRequisitionID#" }) + " '>#=TransportRequisitionNo#</a>  ");
+            columns.Bound(requisition => requisition.Region).Title(Html.Translate("Region"));
+            columns.Bound(requisition => requisition.Program).Title(Html.Translate("Program"));
+            columns.Bound(requisition => requisition.Round);
+            columns.Bound(requisition => requisition.DateRequested).Title(Html.Translate("Request Date")).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
+            //columns.Bound(requisition => requisition.CertifiedBy);
+            //columns.Bound(requisition => requisition.DateCertified).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
+            columns.Bound(requisiton => requisiton.Status).Title(Html.Translate("Status"));
 
+             columns.Bound(p => p.Status).Title(Html.Translate("Workflow")).ClientTemplate(
+            @"<div class='btn-group'>
+                <button type='button' id='workflow-#=TransportRequisitionNo#' onClick=workflow_history('#=BusinessProcessID#') class='btn btn-default dropdown-toggle btn-xs green-stripe' data-toggle='dropdown'>
+                    <i class='fa fa-ellipsis-horizontal'></i>"
 
-})
+        +
+                              " <a href=\"javascript: workflow_history('#=BusinessProcessID#')\"> History </a>" +
+                          " </button></div>");
+
+        })
     .Editable(editable => editable.Mode(GridEditMode.PopUp))
     .Sortable()
     .Filterable()
@@ -104,7 +112,35 @@
     </div>
 </div>
 
+<div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 id="modalHistoryLabel">Activity History</h4>
+            </div>
+            <div class="modal-body" id="modalHistoryBody">History</div>
+
+        </div>
+    </div>
+</div>
+
+@*@Html.Partial("~/Views/Shared/_PromotWorkflow.cshtml");*@
+
 <script>
+
+    var history_link = "@Url.Action("History", "BusinessProcess", new { Area = "WorkflowManager", id = "0" })";
+
+    function workflow_history(BusinessProcessID) {
+        console.log("BusinessProcessID: " + BusinessProcessID);
+        $('#modalHistory').modal();
+        $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
+        $.post(history_link + BusinessProcessID, {},
+            function (data) {
+                $("#modalHistoryBody").html(data);
+            }
+        );
+    }
     function searchIndexObj() {
         //alert($("#AdminUnitTreeView").data("kendoTreeView").dataSource.id);
         var searchIndexValue = $("#searchIndex").val();
