--- a/Web/Areas/Logistics/Views/Home/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Home/Index.cshtml
@@ -570,64 +570,6 @@
                 </div>
             </div>
 
-
-            <!--Added by Nigus-->
-            <!--UI Region for bid winners with date expired without signing a contract-->
-            @*<div class="col-md-12">
-                    <div id="IncommingGRNContent">
-                        <div ng-controller="IncommingGRNController">
-                            <div class="portlet light bordered">
-                                <div class="portlet-title">
-                                    <div class="caption font-green-sharp"><i class="fa fa-list font-green-sharp"></i> @Html.Translate("Incomming GRN")</div>
-                                    <div class="tools">
-                                        <a href="#" class="collapse" data-original-title="" title=""></a>
-                                    </div>
-                                    <div class="actions">
-                                        <input type="text" id="hiddenTransporterIdValue" name="myText" style="display:none">
-                                        <a class="btn green" onclick="DetailGRN()"><i class="fa fa-list"></i> @Html.Translate("Detail")</a>
-                                        <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
-                                    </div>
-                                </div>
-                                <div class="portlet-body">
-                                    <div class="row">
-                                        <div class="col-md-3">
-                                            <div class="form-group form-md-line-input">
-                                                <select class="form-control" id="incommingGRN" ng-change="onChange(transporter)" ng-model="transporter" ng-options="transporter.TransporterId as transporter.name for transporter in transporters">
-                                                    <option> Choose a Transporter </option>
-                                                </select>
-                                                <label for="incommingGRN">Transporter: </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="table-responsive">
-                                        <table id="tableIncommingGRN" class="table table-striped table-checkable">
-                                            <thead>
-                                                <tr>
-                                                    <th class="hidden-xs">Number</th>
-                                                    <th>Dispatch Date</th>
-                                                    <th>GIN</th>
-                                                    <th>Dispatched by Store Man</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr ng-repeat="req in IncommingGRNs.GRN" >
-                                                    <td class="hidden-xs">{{$index + 1}}</td>
-                                                    <td>{{req.DispatchDate}}</td>
-                                                    <td>{{req.GIN}}</td>
-                                                    <th>{{req.DispatchedByStoreMan}}</th>
-                                                    <th>{{req.DispatchID}}</th>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                     /.table-responsive
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>*@
-
-
             <div class="col-md-12 column " ng-controller="IncommingGrnController">
 
                 <div class="portlet light bordered ">
@@ -671,6 +613,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
+                                <img class="loading" ng-show="ctrlStatus.loadingIncommingGrns" src="~/Content/Icons/loading-x.gif" />
                                 <div class="table-responsive">
                                     <table id="tableIncommingGRN" class="table table-striped table-checkable">
                                         <thead>
@@ -679,7 +622,6 @@
                                                 <th style="overflow: visible; white-space: normal;" scope="col" data-title="Dispatched Date" data-field="DispatchDate" class="cats-date-pref-grid">
                                                     <span>Dispatched Date</span>
                                                 </th>
-
                                                 <th>GIN</th>
                                                 <th>Dispatched by Store Man</th>
                                             </tr>
@@ -718,7 +660,7 @@
                                     <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
                                 </div>
                             </div>
-                            <div class="portlet-body">
+                            <div class="portlet-body">                                
                                 <div class="table-responsive">
                                     <table id="" class="table table-striped table-checkable table-condensed">
                                         <thead>
@@ -1198,48 +1140,20 @@
         ]);
 
 
-        //Added by Nigus
-        @*myApp.controller('IncommingGRNController', [
-        '$scope', '$http', '$rootScope', function($scope, $http, $rootScope) {
-
-            $scope.IncommingGRNs = {};
-            $rootScope.regionName = "";
-            $rootScope.TransporterId = 0;
-            $scope.transporters = [];
-            $rootScope.transporters2 = [];
-            $http({ method: 'GET', url: '@Url.Action("GetTransporters2", "Home")' }).success(function(data, status, headers, config) {
-                $scope.transporters = data;
-                $rootScope.transporters2 = data;
-            });
-
-
-            $scope.onChange = function(transporterId) {
-                $http({
-                        method: 'GET',
-                        params: { transporterID: transporterId },
-                        url: '@Url.Action("PaymentRequests2", "TransporterPaymentRequest",new { Area = "Logistics" })'
-                    })
-                    .success(function(data, status, hstatus, headers, configeaders, config) {
-                        $scope.IncommingGRNs.GRN = data;
-                    }).error(function() {});
-
-                $('#hiddenTransporterIdValue').val(transporterId);
-            };
-
-            $scope.Detail = function (transporterId) {
-                window.location = "@Url.Action("PaymentRequests", "TransporterPaymentRequest", new {Area = "Logistics"})" + "?transporterID =" + transporterId; //+Transport "/" + bidId ;
-            };
-        }
-    ]);*@
-
         myApp.controller('IncommingGrnController', [
     '$scope', '$http', '$rootScope', function ($scope, $http, $rootScope) {
         $scope.Transporters = [];
         $scope.reqParam = { startDate: new Date(), endDate: new Date(), transporterName: '', takeTheFirst: 10 };
         $scope.IncommingGrns = [];
-
+        $scope.ctrlStatus =
+   {
+       loadingIncommingGrns: true,
+   };
+        $scope.ctrlStatus.loadingIncommingGrns = false;
         var onIncommingGrns = function (data) {
             $scope.IncommingGrns = data;
+
+            $scope.ctrlStatus.loadingIncommingGrns = false;
         };
 
         $http({ method: 'GET', url: '@Url.Action("GetTransporters", "Home")' }).success(function (data, status, headers, config) { $scope.Transporters = data; })
@@ -1247,6 +1161,9 @@
             });
 
         $scope.onChange = function (transporter) {
+
+            $scope.ctrlStatus.loadingIncommingGrns = true;
+
             $scope.reqParam.transporterName = transporter;
             $scope.reqParam.takeTheFirst = $("#takeFirstId").val();
 
