Cats-1184 : Fix for a datepicker still showing the popup on a readonly  state

--- a/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
@@ -674,6 +674,11 @@
         });
     });
     $(document).ready(function () {
+      
+        if ($('#ReceiptDate').is('[readonly]')) {
+            $('#ReceiptDate').prop('disabled', true);
+        }
+
         $("#ReceiveDetailNewViewModel_ReceivedQuantityInUnit").on('input', function () {
             // alert("why ?");
             var mesarement = $('#ReceiveDetailNewViewModel_UnitId').val();
