--- a/Web/Report/PSNP/AnnualPlan.rdlc
+++ b/Web/Report/PSNP/AnnualPlan.rdlc
@@ -899,6 +899,7 @@
                                                 </TablixMember>
                                               </TablixMembers>
                                             </TablixRowHierarchy>
+                                            <NoRowsMessage>No Regional PSNP Plan Detail </NoRowsMessage>
                                             <DataSetName>annualplan</DataSetName>
                                             <Top>0.9375in</Top>
                                             <Left>0.05556in</Left>
