Hot-Fix CATS-1455 & CATS-1296

--- a/Web/Areas/Hub/Views/Dispatch/Index.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/Index.cshtml
@@ -577,7 +577,7 @@
     <div class="portlet-title">
         <div class="caption font-green-sharp">
             <i class="icon-list font-green-sharp"></i>
-            <span class="caption-subject bold uppercase"> @Html.Translate("Dispatch To Loans")</span>
+            <span class="caption-subject bold uppercase"> @Html.Translate("Dispatch To Transfer")</span>
         </div>
         <div class="tools">
             <a href="#" class="collapse" data-original-title="" title=""></a>
